--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">PDF Pro</string>
     <string name="banner_test">ca-app-pub-3940256099942544/9214589741</string>
     <string name="onboard_title">Experience the ultimate free PDF service.</string>
+    <string name="title_activity_main_screen">MainScreen</string>
 </resources>
