--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="onboard_title">Experience the ultimate free PDF service.</string>
     <string name="title_activity_main_screen">MainScreen</string>
     <string name="title_activity_test">Test</string>
+    <string name="title_activity_upload">Upload</string>
 </resources>
