--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="onboard_title">Experience the ultimate free PDF service.</string>
     <string name="title_activity_main_screen">MainScreen</string>
     <string name="title_activity_test">Test</string>
-    <string name="upload">Upload</string>
+    <string name="pick">pick</string>
     <string name="splash">splash</string>
     <string name="onBoard">walk through</string>
     <string name="home">Home</string>
