--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,12 @@
     <string name="select_pdf">Select PDF File</string>
     <string name="select_images">Select Images</string>
     <string name="page_number">Page Number</string>
-<!--***********Languages ***********************-->
+    <string name="sort_by_date">Sort by date</string>
+    <string name="sort_by_size">Sort by size</string>
+    <string name="sort_by_name">Sort by name</string>
+    <string name="change_order">change order of files</string>
+    <string name="sort_options">Sorting Options</string>
+    <!--***********Languages ***********************-->
     <string name="language">Language</string>
     <string-array name="english" translatable="false">
         <item>en</item>
