--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -43,6 +43,15 @@
     <string name="change_order">Changer l\'ordre des fichiers</string>
     <string name="sort_options">Options de tri</string>
     <string name="share">Partager</string>
+    <string name="convert2pdf">Convertir en pdf</string>
+    <string name="delete_file_dialog_title">Supprimer le fichier?</string>
+    <string name="delete_file_dialog_text">"%1$s" sera supprimé de ces fichiers texte.</string>
+    <string name="pdf_key_input">mot de passe</string>
+    <string name="decrypt_password_wrong">Le mot de passe saisi est incorrect, veuillez réessayer!</string>
+    <string name="pdf_file_picker">Sélecteur de fichiers Pdf</string>
+    <string name="text_files_log">Journal des fichiers texte</string>
+    <string name="dismiss">Annuler</string>
+    <string name="save">Enregistrer</string>
 
     <string name="ocr_description">Libérez le potentiel de la reconnaissance optique de caractères pour une extraction de texte simplifiée.</string>
     <string name="compress_pdf_description">Compressez facilement les fichiers PDF tout en préservant la qualité et en réduisant la taille du fichier avec notre outil de compression intuitif.</string>
