--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -43,6 +43,16 @@
     <string name="change_order">Изменить порядок файлов</string>
     <string name="sort_options">Опции сортировки</string>
     <string name="share">Поделиться</string>
+    <string name="convert2pdf">Конвертировать в PDF</string>
+    <string name="delete_file_dialog_title">Удалить файл?</string>
+    <string name="delete_file_dialog_text">"%1$s" будет удален из этих текстовых файлов.</string>
+    <string name="pdf_key_input">пароль</string>
+    <string name="decrypt_password_wrong">Введен неправильный пароль, пожалуйста, попробуйте еще раз!</string>
+    <string name="pdf_file_picker">Выбор файла PDF</string>
+    <string name="text_files_log">Журнал текстовых файлов</string>
+    <string name="dismiss">Отклонить</string>
+    <string name="save">Сохранить</string>
+
     <string name="ocr_description">Откройте возможности оптического распознавания символов для упрощенного извлечения текста.</string>
     <string name="compress_pdf_description">Легко сжимайте PDF файлы, сохраняя качество и уменьшая размер файла с помощью нашего интуитивного инструмента сжатия.</string>
     <string name="lock_description">Защитите свой PDF паролем для защиты конфиденциальной информации.</string>
