--- a/feature/settings/src/main/res/values-hi/strings.xml
+++ b/feature/settings/src/main/res/values-hi/strings.xml
@@ -18,6 +18,6 @@
         <item>Read our Privacy Policy to understand how we collect, use, and protect your data.</item>
     </string-array>
     <string name="settings">Settings</string>
-    <string name="version">Version \'%1$s\'</string>
+    <string name="version">hindi check version \'%1$s\'</string>
 
 </resources>
