--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -53,11 +53,12 @@
     <string name="dismiss">खारिज करें</string>
     <string name="save">सहेजें</string>
 
-
     <string name="ocr_description">स्ट्रीमलाइन टेक्स्ट एक्सट्रैक्शन के लिए ऑप्टिकल कैरेक्टर रिकॉग्निशन की संभावनाओं को अनलॉक करें।</string>
     <string name="compress_pdf_description">गुणवत्ता को बनाए रखते हुए और फ़ाइल आकार को कम करते हुए हमारे सहज संपीड़न उपकरण के साथ आसानी से पीडीएफ फाइलें संकुचित करें</string>
     <string name="lock_description">संवेदनशील जानकारी की सुरक्षा के लिए अपने पीडीएफ को पासवर्ड सुरक्षा के साथ सुरक्षित करें।</string>
     <string name="pdf2txt_description">हमारा उन्नत टेक्स्ट एक्सट्रैक्शन एल्गोरिदम उच्च सटीकता सुनिश्चित करता है, स्वरूपण और लेआउट को वफादारी से बनाए रखता है।</string>
+
+    <!--    <string name="pdf2txt_description">हमारा उन्नत टेक्स्ट एक्सट्रैक्शन एल्गोरिदम उच्च सटीकता सुनिश्चित करता है, स्वरूपण और लेआउट को वफादारी से बनाए रखता है।</string>-->
     <string name="pdf2img_description">हमारा अत्याधुनिक पीडीएफ से चित्र कनवर्टर उच्च गुणवत्ता वाली छवि आउटपुट सुनिश्चित करता है, आपके दस्तावेज़ की अखंडता और स्पष्टता को बनाए रखता है।</string>
     <string name="img2pdf_description">हमारा अत्याधुनिक चित्र से पीडीएफ कनवर्टर उच्च गुणवत्ता वाली पीडीएफ सुनिश्चित करता है, आपके दस्तावेज़ की अखंडता और स्पष्टता को बनाए रखता है।</string>
 </resources>
