--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="upload_screen_banner" translatable="false">ca-app-pub-9471515798383572/1747507268</string>
+    <string name="save_pdf_screen_banner" translatable="false">ca-app-pub-9471515798383572/3746984642</string>
+
     <string name="app_name" translatable="false">PDF Pro</string>
     <string name="confirm">Confirm</string>
     <string name="close">Close</string>
@@ -12,7 +15,12 @@
     <string name="save_to_storage">Save to device</string>
     <string name="settings">Settings</string>
     <string name="home">Home</string>
-
+    <string name="share">Share</string>
+    <string name="jump_to_page">Jump To Page</string>
+    <string name="vertical">vertical</string>
+    <string name="horizontal">horizontal</string>
+    <string name="page_number">Page Number</string>
+    <string name="enter_valid_no">Please enter a valid page number</string>
     <string name="pdf2text">Pdf to text</string>
     <string name="pdf2img">Pdf to images</string>
     <string name="img2pdf">Images to pdf</string>
